# ReDynELA

./: AUTHORS  LICENSE.txt  README.md  guix.scm
PostProcessor/: DynELA_curves
Samples/Taylor/: Taylor_Axi_Parametric.dyn
Samples/Traction/: Traction.dyn
Sources/: CMakeLists.txt
Sources/Applications/: CMakeLists.txt
Sources/Applications/DynELA_solve/: CMakeLists.txt  main.C
Sources/Libraries/: CMakeLists.txt
Sources/Libraries/basicTools/: Boolean.h  CMakeLists.txt  CPUclock.C  CPUclock.h  Configuration.C  Configuration.h  Const.h  DynELA_Licence.h  Error.C  Error.h  Exception.C  Exception.h  List.h  LogFile.C  LogFile.h  Math.h  ObjectList.C  ObjectList.h  Picture.C  Picture.h  SampleArchive.C  SampleArchive.h  Stack.h  String.C  String.h  Timer.C  Timer.h  Unix.C  Unix.h  basicTools.h  upBasicTools.h  windowStyles.h
Sources/Libraries/finiteElement/: Boundaries.h  Boundary.C  Boundary.h  CMakeLists.txt  Contact.C  Contact.h  ContactLaw.C  ContactLaw.h  Coulomb.C  Coulomb.h  DefaultValues.h  Domain.C  Domain.h  ElHex8n3D.C  ElHex8n3D.h  ElQua4n2D.C  ElQua4n2D.h  ElQua4nAx.C  ElQua4nAx.h  ElTet10n3D.C  ElTet10n3D.h  ElTet4n3D.C  ElTet4n3D.h  ElTri3n2D.C  ElTri3n2D.h  Element.C  Element.h  Element2D.C  Element2D.h  Element3D.C  Element3D.h  ElementAx.C  ElementAx.h  ElementPlane.C  ElementPlane.h  Elements.h  ExplicitSolver.C  ExplicitSolver.h  ExplicitSolverCH.C  ExplicitSolverCH.h  (+55 more)
Sources/Libraries/interpretor/: CMakeLists.txt  ExportAbaqus.C  ExportAbaqus.h  ExportDynELA.C  ExportDynELA.h  InputDyn.C  InputDyn.h  InputDyn.l  InputDyn.y  y.code.c
Sources/Libraries/lapack/: CMakeLists.txt  blaswrap.h  clapack.h  f2c.h
Sources/Libraries/lapack/Lapack/: xerbla.c
Sources/Libraries/linearAlgebra/: CMakeLists.txt  DiscreteFunction.C  DiscreteFunction.h  Function.C  Function.h  Matrices.h  Matrix.C  Matrix.h  MatrixDiag.C  MatrixDiag.h  MatrixSparse.C  MatrixSparse.h  Plane.C  Plane.h  PolynomialFunction.C  PolynomialFunction.h  PrecondDiag.C  PrecondDiag.h  RampFunction.C  RampFunction.h  SinusFunction.C  SinusFunction.h  Tensor2.C  Tensor2.h  Tensor3.C  Tensor3.h  Tensor4.C  Tensor4.h  Vec3D.C  Vec3D.h  Vector.C  Vector.h  linearAlgebra.h  upLinearAlgebra.h
