CMAKE_MINIMUM_REQUIRED(VERSION 3.8)

PROJECT(DynELA C CXX)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
file(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
SET(SOURCE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
SET(SOURCE_LIBRARY_DIRECTORY ${SOURCE_DIRECTORY}/Libraries)
SET(SOURCE_APPLICATIONS_DIRECTORY ${SOURCE_DIRECTORY}/Applications)

# Search for OpenMP
FIND_PACKAGE(OpenMP REQUIRED)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -O3")

# Liste des sources
ADD_SUBDIRECTORY(Libraries)
ADD_SUBDIRECTORY(Applications)
